--- a/app/sheet/sheetheader/components/description.component.html
+++ b/app/sheet/sheetheader/components/description.component.html
@@ -1,4 +1,4 @@
-<div class="sheetComponent">
+<div class="sheetComponent description">
     <div class="sheetComponentHeader">
         Description
     </div>
