--- a/app/sheet/sheetheader/components/points.component.html
+++ b/app/sheet/sheetheader/components/points.component.html
@@ -3,6 +3,37 @@
         Points
     </div>
     <div class="sheetComponentBody">
-        PointsBody
+        <div class="sheetComponentBodyLine">
+            <label>Race</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Attributes</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Advantages</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Disadvantages</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Quirks</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Skills</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Spells</label>
+            <label>0</label>
+        </div>
+        <div class="sheetComponentBodyLine earned">
+            <label>Earned</label>
+            <input type="text" placeholder="37">
+        </div>
     </div>
 </div>
