--- a/app/sheet/sheetheader/sheet-header.component.html
+++ b/app/sheet/sheetheader/sheet-header.component.html
@@ -1,11 +1,11 @@
 <div class="sheetHeader">
-    <portrait-component class="nostretch"></portrait-component>
-    <div class="stretch">
-        <div class="double">
-            <identity-component class="stretch"></identity-component>
-            <player-information-component class="stretch"></player-information-component>
+    <portrait-component class="portraitWrapper"></portrait-component>
+    <div class="centerComponentsWrapper">
+        <div class="centerComponentsFirstLineWrapper">
+            <identity-component class="identityWrapper"></identity-component>
+            <player-information-component class="playerInformationWrapper"></player-information-component>
         </div>
-        <description-component></description-component>
+        <description-component class="descriptionWrapper"></description-component>
     </div>
-    <points-component class="nostretch"></points-component>
+    <points-component class="pointsWrapper"></points-component>
 </div>
