--- a/app/sheet/sheetheader/components/identity.component.html
+++ b/app/sheet/sheetheader/components/identity.component.html
@@ -3,6 +3,17 @@
         Identity
     </div>
     <div class="sheetComponentBody">
-        Identity Body
+        <div class="sheetComponentBodyLine">
+            <label>Name</label>
+            <input type="text" placeholder="Dai Blackthorn">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Title</label>
+            <input type="text" placeholder="Captain">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Religion</label>
+            <input type="text" placeholder="Atheist">
+        </div>
     </div>
 </div>
