--- a/app/sheet/sheetheader/components/player-information.component.html
+++ b/app/sheet/sheetheader/components/player-information.component.html
@@ -3,6 +3,17 @@
         Player Information
     </div>
     <div class="sheetComponentBody">
-        Player Information Body
+        <div class="sheetComponentBodyLine">
+            <label>Player</label>
+            <input type="text" placeholder="Steve Jackson">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Campaign</label>
+            <input type="text" placeholder="Masters of Mayhem">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label>Created on</label>
+            <input type="text" placeholder="Januari 1, 2000">
+        </div>
     </div>
 </div>
