--- a/app/sheet/sheetheader/components/points.component.css
+++ b/app/sheet/sheetheader/components/points.component.css
@@ -1,3 +1,16 @@
 .points {
     height: calc(100% - 10px);
 }
+
+.points .sheetComponentBody {
+    width: 100px;
+}
+
+.earned {
+    border-top: solid darkgray 1px;
+}
+
+.earned input {
+    width: 30px;
+    text-align: right;
+}
