--- a/app/sheet/sheetheader/sheet-header.component.css
+++ b/app/sheet/sheetheader/sheet-header.component.css
@@ -1,4 +1,4 @@
-.sheetHeader{
+.sheetHeader {
     border: black solid 1px;
     border-radius: 2px;
     display: flex;
@@ -7,3 +7,37 @@
     justify-content: space-between;
     align-items: stretch;
 }
+
+.portraitWrapper {
+    flex: none;
+}
+
+.descriptionWrapper {
+    flex: 1;
+    margin-bottom: 10px;
+}
+
+.pointsWrapper {
+    flex: none;
+}
+
+.centerComponentsWrapper {
+    flex: auto;
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+
+.centerComponentsFirstLineWrapper {
+    display: flex;
+    flex-direction: row;
+    flex-wrap: nowrap;
+    justify-content: space-between;
+    align-items: stretch;
+}
+
+.identityWrapper,
+.playerInformationWrapper {
+    flex: auto;
+}
+
