Added basic i18n setup

--- a/src/app/sheet-component/sheet-header-component/points-component/points.component.html
+++ b/src/app/sheet-component/sheet-header-component/points-component/points.component.html
@@ -1,6 +1,6 @@
 <div class="sheetComponent points">
   <div class="sheetComponentHeader">
-    Points
+    {{ 'POINTS' | translate }}
   </div>
   <div class="sheetComponentBody">
     <div class="sheetComponentBodyLine">
