Applied i18n to the current existing fields

--- a/src/app/sheet-component/sheet-header-component/description-component/description.component.html
+++ b/src/app/sheet-component/sheet-header-component/description-component/description.component.html
@@ -1,6 +1,6 @@
 <div class="sheetComponent description">
   <div class="sheetComponentHeader">
-    Description
+    {{ 'DESCRIPTION.DESCRIPTION' | translate }}
   </div>
   <div class="sheetComponentBody">
     Description Body
