--- a/src/app/sheet-component/sheet-header-component/portrait-component/portrait.component.html
+++ b/src/app/sheet-component/sheet-header-component/portrait-component/portrait.component.html
@@ -1,6 +1,6 @@
 <div class="sheetComponent portrait">
   <div class="sheetComponentHeader">
-    Portrait
+    {{ 'PORTRAIT.PORTRAIT' | translate }}
   </div>
   <div class="sheetComponentBody">
     PortraitBody
