--- a/src/app/sheet-component/sheet-header-component/identity-component/identity.component.html
+++ b/src/app/sheet-component/sheet-header-component/identity-component/identity.component.html
@@ -1,19 +1,19 @@
 <div class="sheetComponent">
-  <div class="sheetComponentHeader">
-    Identity
-  </div>
-  <div class="sheetComponentBody">
-    <div class="sheetComponentBodyLine">
-      <label>Name</label>
-      <input type="text" placeholder="Dai Blackthorn">
+    <div class="sheetComponentHeader">
+        {{ 'IDENTITY.IDENTITY' | translate }}
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>Title</label>
-      <input type="text" placeholder="Captain">
+    <div class="sheetComponentBody">
+        <div class="sheetComponentBodyLine">
+            <label> {{ 'IDENTITY.NAME' | translate }}</label>
+            <input type="text" placeholder="Dai Blackthorn">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label> {{ 'IDENTITY.TITLE' | translate }}</label>
+            <input type="text" placeholder="Captain">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label> {{ 'IDENTITY.RELIGION' | translate }}</label>
+            <input type="text" placeholder="Atheist">
+        </div>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>Religion</label>
-      <input type="text" placeholder="Atheist">
-    </div>
-  </div>
 </div>
