--- a/src/app/sheet-component/sheet-header-component/player-information-component/player-information.component.html
+++ b/src/app/sheet-component/sheet-header-component/player-information-component/player-information.component.html
@@ -1,19 +1,19 @@
 <div class="sheetComponent">
-  <div class="sheetComponentHeader">
-    Player Information
-  </div>
-  <div class="sheetComponentBody">
-    <div class="sheetComponentBodyLine">
-      <label>Player</label>
-      <input type="text" placeholder="Steve Jackson">
+    <div class="sheetComponentHeader">
+        {{ 'PLAYER_INFORMATION.PLAYER_INFORMATION' | translate }}
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>Campaign</label>
-      <input type="text" placeholder="Masters of Mayhem">
+    <div class="sheetComponentBody">
+        <div class="sheetComponentBodyLine">
+            <label> {{ 'PLAYER_INFORMATION.PLAYER' | translate }}</label>
+            <input type="text" placeholder="Steve Jackson">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label> {{ 'PLAYER_INFORMATION.CAMPAIGN' | translate }}</label>
+            <input type="text" placeholder="Masters of Mayhem">
+        </div>
+        <div class="sheetComponentBodyLine">
+            <label> {{ 'PLAYER_INFORMATION.CREATED_ON' | translate }}</label>
+            <input type="text" placeholder="Januari 1, 2000">
+        </div>
     </div>
-    <div class="sheetComponentBodyLine">
-      <label>Created on</label>
-      <input type="text" placeholder="Januari 1, 2000">
-    </div>
-  </div>
 </div>
