Added Angular2 Materials

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,14 @@
-<sheet></sheet>
+<md-sidenav-layout>
+    <md-sidenav #start (open)="closeStartButton.focus()">
+        Start Sidenav.
+        <br>
+        <button md-button #closeStartButton (click)="start.close()">Close</button>
+    </md-sidenav>
+
+    <sheet></sheet>
+    <button md-button (click)="start.open()">Open start sidenav</button>
+
+</md-sidenav-layout>
+
+
+
