Refactored the messagebundle content

--- a/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/description-component/description.component.html
@@ -1,6 +1,6 @@
 <div class="sheetComponent description">
   <div class="sheetComponentHeader">
-    {{ 'DESCRIPTION.DESCRIPTION' | translate }}
+    {{ 'SHEET.DESCRIPTION.DESCRIPTION' | translate }}
   </div>
   <div class="sheetComponentBody">
     Description Body
