--- a/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/identity-component/identity.component.html
@@ -1,18 +1,18 @@
 <div class="sheetComponent">
     <div class="sheetComponentHeader">
-        {{ 'IDENTITY.IDENTITY' | translate }}
+        {{ 'SHEET.IDENTITY.IDENTITY' | translate }}
     </div>
     <div class="sheetComponentBody">
         <div class="sheetComponentBodyLine">
-            <label> {{ 'IDENTITY.NAME' | translate }}</label>
+            <label> {{ 'SHEET.IDENTITY.NAME' | translate }}</label>
             <input type="text" placeholder="Dai Blackthorn">
         </div>
         <div class="sheetComponentBodyLine">
-            <label> {{ 'IDENTITY.TITLE' | translate }}</label>
+            <label> {{ 'SHEET.IDENTITY.TITLE' | translate }}</label>
             <input type="text" placeholder="Captain">
         </div>
         <div class="sheetComponentBodyLine">
-            <label> {{ 'IDENTITY.RELIGION' | translate }}</label>
+            <label> {{ 'SHEET.IDENTITY.RELIGION' | translate }}</label>
             <input type="text" placeholder="Atheist">
         </div>
     </div>
