--- a/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/player-information-component/player-information.component.html
@@ -1,18 +1,18 @@
 <div class="sheetComponent">
     <div class="sheetComponentHeader">
-        {{ 'PLAYER_INFORMATION.PLAYER_INFORMATION' | translate }}
+        {{ 'SHEET.PLAYER_INFORMATION.PLAYER_INFORMATION' | translate }}
     </div>
     <div class="sheetComponentBody">
         <div class="sheetComponentBodyLine">
-            <label> {{ 'PLAYER_INFORMATION.PLAYER' | translate }}</label>
+            <label> {{ 'SHEET.PLAYER_INFORMATION.PLAYER' | translate }}</label>
             <input type="text" placeholder="Steve Jackson">
         </div>
         <div class="sheetComponentBodyLine">
-            <label> {{ 'PLAYER_INFORMATION.CAMPAIGN' | translate }}</label>
+            <label> {{ 'SHEET.PLAYER_INFORMATION.CAMPAIGN' | translate }}</label>
             <input type="text" placeholder="Masters of Mayhem">
         </div>
         <div class="sheetComponentBodyLine">
-            <label> {{ 'PLAYER_INFORMATION.CREATED_ON' | translate }}</label>
+            <label> {{ 'SHEET.PLAYER_INFORMATION.CREATED_ON' | translate }}</label>
             <input type="text" placeholder="Januari 1, 2000">
         </div>
     </div>
