--- a/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/points-component/points.component.html
@@ -1,38 +1,38 @@
 <div class="sheetComponent points">
   <div class="sheetComponentHeader">
-    {{ 'POINTS.POINTS' | translate }}
+    {{ 'SHEET.POINTS.POINTS' | translate }}
   </div>
   <div class="sheetComponentBody">
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.RACE' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.RACE' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.ATTRIBUTES' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.ATTRIBUTES' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.ADVANTAGES' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.ADVANTAGES' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.DISADVANTAGES' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.DISADVANTAGES' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.QUIRKS' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.QUIRKS' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.SKILLS' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.SKILLS' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine">
-      <label>{{ 'POINTS.SPELLS' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.SPELLS' | translate }}</label>
       <label>0</label>
     </div>
     <div class="sheetComponentBodyLine earned">
-      <label>{{ 'POINTS.EARNED' | translate }}</label>
+      <label>{{ 'SHEET.POINTS.EARNED' | translate }}</label>
       <input type="text" placeholder="37">
     </div>
   </div>
