--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -5,7 +5,7 @@
         <button md-button #closeStartButton (click)="start.close()">Close</button>
     </md-sidenav>
 
-
+    <app-header class="appHeader"></app-header>
     <sheet></sheet>
     <button md-button (click)="start.open()">Sidenav</button>
 </md-sidenav-layout>
