--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
+@import '../src/themes/default.css';
+@import '../src/themes/darcula.css';
 
 body {
     margin: 0px 0px 0px 0px;
