Work in progres on the default theme

--- a/src/app/components/header-component/header/header.component.css
+++ b/src/app/components/header-component/header/header.component.css
@@ -1,8 +1,26 @@
 .header{
     box-shadow: 0 2px 5px 0 rgba(0,0,0,0.24);
     margin-bottom: 8px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
 }
 
-.gurpsyMcGurpsFaceMenuIcon{
+.header .headerMenuButton{
+    flex:none;
     padding-top: 4px;
+    padding-left: 4px;
+}
+
+.header .headerApplicationName{
+    flex:auto;
+    padding-top: 6px;
+    padding-left: 8px;
+    font-family: 'Abel', sans-serif !important;
+}
+
+.header .headerSettings{
+    flex:none;
+    padding-top: 4px;
+    padding-right: 4px;
 }
