--- a/src/app/components/header-component/header/header.component.html
+++ b/src/app/components/header-component/header/header.component.html
@@ -1,12 +1,11 @@
 <div class="header">
-    <div>
-        <i _ngcontent-lfo-1="" class="material-icons app-toolbar-menu gurpsyMcGurpsFaceMenuIcon">menu</i>
+    <div class="headerMenuButton">
+        <i class="material-icons">menu</i>
+    </div>
+    <div class="headerApplicationName">
         {{'APPLICATION'| translate}}
     </div>
-    <div>
-
-    </div>
-    <div>
-
+    <div class="headerSettings">
+        <i class="material-icons">settings</i>
     </div>
 </div>
