--- a/src/app/components/header-component/header.component.html
+++ b/src/app/components/header-component/header.component.html
@@ -1,11 +1,15 @@
 <div class="header">
     <div class="headerMenuButton">
-        <i class="material-icons">menu</i>
+        <button md-icon-button>
+            <md-icon>menu</md-icon>
+        </button>
     </div>
     <div class="headerApplicationName">
         {{'APPLICATION'| translate}}
     </div>
     <div class="headerSettings">
-        <i class="material-icons">settings</i>
+        <button md-icon-button>
+            <md-icon>settings</md-icon>
+        </button>
     </div>
 </div>
