--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -17,3 +17,7 @@
     background: #192231 !important;
     color: white !important;
 }
+
+.sideNavigationHeader{
+    background: #985E6D !important;
+}
