--- a/src/app/components/sheet-component/sheet-header-component/portrait-component/portrait.component.css
+++ b/src/app/components/sheet-component/sheet-header-component/portrait-component/portrait.component.css
@@ -1,3 +1,8 @@
 .portrait {
-  height: calc(100% - 10px);
+    height: calc(100% - 10px);
+}
+
+.portrait .sheetComponentBody img {
+    width: 100px;
+    padding: 0px 0px 0px 0px;
 }
