--- a/src/app/components/sheet-component/sheet-header-component/portrait-component/portrait.component.html
+++ b/src/app/components/sheet-component/sheet-header-component/portrait-component/portrait.component.html
@@ -3,6 +3,6 @@
     {{ 'SHEET.PORTRAIT.PORTRAIT' | translate }}
   </div>
   <div class="sheetComponentBody">
-    PortraitBody
+    <img src="assets/images/empty-portrait.png" alt="portrait">
   </div>
 </div>
