--- a/src/app/components/header-component/header.component.html
+++ b/src/app/components/header-component/header.component.html
@@ -1,6 +1,6 @@
 <div class="header">
     <div class="headerMenuButton">
-        <button md-icon-button>
+        <button md-icon-button (click)="onOpenSideNav()">
             <md-icon>menu</md-icon>
         </button>
     </div>
