--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -4,8 +4,8 @@
       Portrait
     </div>
     <div class="closeButton">
-      <button md-icon-button>
-        <md-icon>close</md-icon>
+      <button md-icon-button (click)="onCloseSideNav()">
+        <md-icon>keyboard_backspace</md-icon>
       </button>
     </div>
   </div>
