--- a/src/app/components/side-navigation/side-navigation.component.css
+++ b/src/app/components/side-navigation/side-navigation.component.css
@@ -1,17 +1,23 @@
-.sideNavigation .sideNavigationHeader{
+.sideNavigation .sideNavigationHeader {
     height: 80px;
-    box-shadow: 0 2px 5px 0 rgba(0,0,0,0.24);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.24);
     display: flex;
     flex-direction: row;
     justify-content: space-between;
 }
 
-.sideNavigation .sideNavigationHeader .portrait{
-    flex:auto;
-    padding-top: 4px;
-    padding-left: 4px;
+.sideNavigation .sideNavigationHeader .portrait {
+    flex: auto;
+    padding-left: 8px;
 }
 
-.sideNavigation .sideNavigationHeader .closeButton{
-    flex:none;
+.sideNavigation .sideNavigationHeader .portrait img {
+    padding-top: 8px;
+    -webkit-clip-path: circle(25px at center);
+    width: 50px;
+}
+
+.sideNavigation .sideNavigationHeader .closeButton {
+    flex: none;
+    color: white;
 }
