--- a/src/app/components/header-component/header.component.html
+++ b/src/app/components/header-component/header.component.html
@@ -9,13 +9,10 @@
     </div>
     <div class="headerSettings">
         <button md-icon-button [md-menu-trigger-for]="settings">
-            <md-icon>settings</md-icon>
+            <md-icon>more_vert</md-icon>
         </button>
         <md-menu x-position="before" y-position="below" #settings="mdMenu">
-            <button md-menu-item> Refresh </button>
-            <button md-menu-item> Settings </button>
-            <button md-menu-item> Help </button>
-            <button md-menu-item disabled> Sign Out </button>
+            <button md-menu-item> {{ 'MENU.OPEN' | translate }} </button>
         </md-menu>
     </div>
 </div>
