--- a/src/app/components/header-component/header.component.css
+++ b/src/app/components/header-component/header.component.css
@@ -4,6 +4,8 @@
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    background: var(--header-background-color);
+    color: var(--header-font-color);
 }
 
 .header .headerMenuButton{
