--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -3,21 +3,16 @@
 /*Sunset : #985E6D*/
 /*Evening: #192231*/
 
-.header{
-    background: #494E68 !important;
-    color: white !important;
-}
-
-.sheetComponentBody{
-    background: white !important;
-    color: black !important;
-}
-
-.sheetComponentHeader{
-    background: #192231 !important;
-    color: white !important;
-}
-
-.sideNavigationHeader{
-    background: #985E6D !important;
+:root {
+    /*PAGE HEADER*/
+    --header-background-color: #494E68 ;
+    --header-font-color: #FFFFFF ;
+    /*PAGE SIDE NAVIGATION*/
+    --side-navigation-header-background-color: #985E6D;
+    --side-navigation-header-font-color: #FFFFFF;
+    /*SHEET*/
+    --sheet-component-body-background-color: #FFFFFF;
+    --sheet-component-body-font-color: #000000;
+    --sheet-component-header-background-color: #192231;
+    --sheet-component-header-font-color: #FFFFFF;
 }
