Fixed full-height issue

--- a/src/styles.css
+++ b/src/styles.css
@@ -3,6 +3,11 @@
 @import '../src/themes/default.css';
 @import '../src/themes/darcula.css';
 
+html {
+    height: 100%;
+}
+
 body {
     margin: 0px 0px 0px 0px;
+    height: 100%;
 }
