--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 @import '~@angular/material/core/theming/prebuilt/deeppurple-amber.css';
 @import '../src/themes/default.css';
-@import '../src/themes/darcula.css';
+@import 'app/services/themes-service/themes/darcula.css';
 
 html {
     height: 100%;
