--- a/src/app/services/themes-service/themes/darcula.css
+++ b/src/app/services/themes-service/themes/darcula.css
@@ -1,6 +1,6 @@
 :root {
     /*PAGE HEADER*/
-    --header-background-color: #494E68 ;
+    --header-background-color: #RR0000 ;
     --header-font-color: #FFFFFF ;
     /*PAGE SIDE NAVIGATION*/
     --side-navigation-header-background-color: #985E6D;
