--- a/src/app/components/side-navigation/side-navigation.component.css
+++ b/src/app/components/side-navigation/side-navigation.component.css
@@ -30,3 +30,7 @@
 .sideNavigation .sideNavigationMenu .sheetSettingsMenu{
     margin: 20px 16px 16px 16px;
 }
+
+.sideNavigation .sideNavigationMenu .sheetSettingsMenu .md-radio-button{
+    display: block;
+}
