--- a/src/styles.css
+++ b/src/styles.css
@@ -9,3 +9,7 @@ body {
     margin: 0px 0px 0px 0px;
     height: 100%;
 }
+
+.md-sidenav-content {
+    background: var(--page-background-color);
+}
