--- a/src/themes/darcula.css
+++ b/src/themes/darcula.css
@@ -1,13 +1,19 @@
 :root {
+    /*PAGE*/
+    --page-background-color: #1a1a1a;
     /*PAGE HEADER*/
-    --header-background-color: #FF0000 ;
+    --header-background-color: linear-gradient(to top, #5f5f5f , #808080);
     --header-font-color: #FFFFFF ;
     /*PAGE SIDE NAVIGATION*/
-    --side-navigation-header-background-color: #985E6D;
+    --side-navigation-header-background-color: linear-gradient(to top, #5f5f5f , #808080);
     --side-navigation-header-font-color: #FFFFFF;
+    --side-navigation-background-color: #393939;
+    --side-navigation-font-color: #FFFFFF;
     /*SHEET*/
-    --sheet-component-body-background-color: #FFFFFF;
-    --sheet-component-body-font-color: #000000;
-    --sheet-component-header-background-color: #192231;
-    --sheet-component-header-font-color: #FFFFFF;
+    --sheet-background-color: #4d4f50;
+    --sheet-label-font-color: #E9C587;
+    --sheet-data-font-color: #BEBDBC;
+    --sheet-component-header-background-color: linear-gradient(to top, #5f5f5f , #808080);
+    --sheet-component-header-font-color: #BEBDBC;
+    --sheet-component-body-background-color: #393939;
 }
