--- a/src/themes/darcula.css
+++ b/src/themes/darcula.css
@@ -9,6 +9,7 @@
     --side-navigation-header-font-color: #FFFFFF;
     --side-navigation-background-color: #393939;
     --side-navigation-font-color: #FFFFFF;
+    --side-navigation-back-button: #E9C587;
     /*SHEET*/
     --sheet-background-color: #4d4f50;
     --sheet-label-font-color: #E9C587;
