--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -14,6 +14,7 @@
     --side-navigation-header-font-color: #FFFFFF;
     --side-navigation-background-color: #FFFFFF;
     --side-navigation-font-color: #000000;
+    --side-navigation-back-button: #FFFFFF;
     /*SHEET*/
     --sheet-background-color: #FFFFFF;
     --sheet-component-header-background-color: #192231;
