Added md-buttons as menu items to the sidenav

--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -11,9 +11,9 @@
     </div>
     <div class="sideNavigationMenu">
         <div class="sheetComponentMenu">
-            Item 1<br>
-            Item 2<br>
-            Item 3<br>
+            <button md-button>Item 1</button>
+            <button md-button>Item 2</button>
+            <button md-button>Item 3</button>
         </div>
         <div class="sheetSettingsMenu">
             <div class="settingsMenuLine">
