--- a/src/app/components/side-navigation/side-navigation.component.html
+++ b/src/app/components/side-navigation/side-navigation.component.html
@@ -11,9 +11,12 @@
     </div>
     <div class="sideNavigationMenu">
         <div class="sheetComponentMenu">
-            <button md-button>Item 1</button>
-            <button md-button>Item 2</button>
-            <button md-button>Item 3</button>
+            <button md-button><md-icon>accessibility</md-icon><span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.ATTRIBUTES'| translate}}</span></button>
+            <button md-button><md-icon>hearing</md-icon><span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.DIS_ADVANTAGES'| translate}}</span></button>
+            <button md-button><md-icon>school</md-icon><span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.SKILLS'| translate}}</span></button>
+            <button md-button><md-icon>flash_on</md-icon><span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.MAGIC'| translate}}</span></button>
+            <button md-button><md-icon>card_travel</md-icon><span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.EQUIPMENT'| translate}}</span></button>
+            <button md-button><md-icon>mode_edit</md-icon><span class="sheetComponentMenuItemText">{{'SHEET.SUBJECT.NOTES'| translate}}</span></button>
         </div>
         <div class="sheetSettingsMenu">
             <div class="settingsMenuLine">
