--- a/src/themes/darcula.css
+++ b/src/themes/darcula.css
@@ -10,6 +10,8 @@
     --side-navigation-background-color: #393939;
     --side-navigation-font-color: #FFFFFF;
     --side-navigation-back-button: #E9C587;
+    --side-navigation-menu-separator-color: #5f5f5f;
+    --side-navigation-menu-header-color: #E9C587;
     /*SHEET*/
     --sheet-background-color: #4d4f50;
     --sheet-label-font-color: #E9C587;
