--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -7,14 +7,16 @@
     /*PAGE*/
     --page-background-color: #FFFFFF;
     /*PAGE HEADER*/
-    --header-background-color: #494E68 ;
-    --header-font-color: #FFFFFF ;
+    --header-background-color: #494E68;
+    --header-font-color: #FFFFFF;
     /*PAGE SIDE NAVIGATION*/
     --side-navigation-header-background-color: #985E6D;
     --side-navigation-header-font-color: #FFFFFF;
     --side-navigation-background-color: #FFFFFF;
     --side-navigation-font-color: #000000;
     --side-navigation-back-button: #FFFFFF;
+    --side-navigation-menu-separator-color: #000000;
+    --side-navigation-menu-header-color: #000000;
     /*SHEET*/
     --sheet-background-color: #FFFFFF;
     --sheet-component-header-background-color: #192231;
