--- a/src/themes/default.css
+++ b/src/themes/default.css
@@ -1,27 +1,29 @@
-/*Stormy : #494E6B*/
-/*Cloud  : #98878F*/
-/*Sunset : #985E6D*/
-/*Evening: #192231*/
-
 :root {
+    --stormy: #494E6B;
+    --cloud: #98878F;
+    --sunset: #985E6D;
+    --evening: #192231;
+    --white: #FFFFFF;
+    --black: #000000;
+
     /*PAGE*/
-    --page-background-color: #FFFFFF;
+    --page-background-color: var(--white);
     /*PAGE HEADER*/
-    --header-background-color: #494E68;
-    --header-font-color: #FFFFFF;
+    --header-background-color: var(--stormy);
+    --header-font-color: var(--white);
     /*PAGE SIDE NAVIGATION*/
-    --side-navigation-header-background-color: #985E6D;
-    --side-navigation-header-font-color: #FFFFFF;
-    --side-navigation-background-color: #FFFFFF;
-    --side-navigation-font-color: #000000;
-    --side-navigation-back-button: #FFFFFF;
-    --side-navigation-menu-separator-color: #000000;
-    --side-navigation-menu-header-color: #000000;
+    --side-navigation-header-background-color: var(--sunset);
+    --side-navigation-header-font-color: var(--white);
+    --side-navigation-background-color: var(--white);
+    --side-navigation-font-color: var(--black);
+    --side-navigation-back-button: var(--white);
+    --side-navigation-menu-separator-color: var(--stormy);
+    --side-navigation-menu-header-color: var(--stormy);
     /*SHEET*/
-    --sheet-background-color: #FFFFFF;
-    --sheet-component-header-background-color: #192231;
-    --sheet-component-header-font-color: #FFFFFF;
-    --sheet-component-body-background-color: #FFFFFF;
-    --sheet-label-font-color: #000000;
-    --sheet-data-font-color: #000000
+    --sheet-background-color: var(--white);
+    --sheet-component-header-background-color: var(--evening);
+    --sheet-component-header-font-color: var(--white);
+    --sheet-component-body-background-color: var(--white);
+    --sheet-label-font-color: var(--black);
+    --sheet-data-font-color: var(--black);
 }
